// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the wooley way fe child route with matching route should mount navigate sub-* routes 1`] = `"<h1>ProductsComponent 1</h1><p></p>"`;

exports[`the wooley way fe child route with matching route should mount navigate sub-* routes 2`] = `"<h1>ProductsComponent 1</h1><p></p>"`;

exports[`the wooley way fe child route with matching route should mount navigate sub-* routes: products full dom 1`] = `"<span>Loading...</span>"`;

exports[`the wooley way fe child route with matching route should mount navigate sub-* routes: products full dom 2`] = `"<div><h1>ProductsComponent </h1><p></p><h1>ProductSearchComponent</h1></div>"`;

exports[`the wooley way fe child route with matching route should mount on navigate 1`] = `"<h1>ProductsComponent 1</h1><p></p>"`;

exports[`the wooley way fe child route with matching route should mount on navigate 2`] = `"<h1>ProductsComponent 2</h1><p></p>"`;

exports[`the wooley way fe child route with matching route should mount on navigate: products-full-dom 1`] = `"<span>Loading...</span>"`;

exports[`the wooley way fe child route with matching route should mount on navigate: products-full-dom 2`] = `"<div><h1>ProductsComponent </h1><p></p></div>"`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state on subRoutes: after unmount 1`] = `"<span>Loading...</span>"`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state on subRoutes: mount 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "0",
        "pathname": "",
        "search": "",
      },
    ],
    "key": "<key>",
    "pathname": "/products/search",
    "search": "",
    "state": undefined,
  },
  "num": 12,
  "products": Object {
    "products": Array [
      Object {
        "type": "test",
      },
    ],
  },
  "productsSearch": Object {
    "products": Array [
      Object {
        "type": "test",
      },
    ],
  },
  "str": "test",
}
`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state on subRoutes: none 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [],
    "key": "<key>",
    "pathname": "",
    "search": "",
  },
  "num": 12,
  "str": "test",
}
`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state on subRoutes: unmount 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "0",
        "pathname": "",
        "search": "",
      },
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "1",
        "pathname": "/products/search",
        "search": "",
        "state": undefined,
      },
    ],
    "key": "<key>",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "num": 12,
  "products": null,
  "productsSearch": null,
  "str": "test",
}
`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state: full after product unmount 1`] = `"<div><h1>ProductsComponent </h1><p></p></div>"`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state: full after product unmount 2`] = `"<div><h1>ProductsComponent </h1><p></p></div>"`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state: mount 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "0",
        "pathname": "",
        "search": "",
      },
    ],
    "key": "<key>",
    "pathname": "/products",
    "search": "",
    "state": undefined,
  },
  "num": 12,
  "products": Object {
    "products": Array [
      Object {
        "type": "test",
      },
    ],
  },
  "str": "test",
}
`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state: none 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [],
    "key": "<key>",
    "pathname": "",
    "search": "",
  },
  "num": 12,
  "str": "test",
}
`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state: unmount 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "0",
        "pathname": "",
        "search": "",
      },
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "1",
        "pathname": "/products",
        "search": "",
        "state": undefined,
      },
    ],
    "key": "<key>",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "num": 12,
  "products": null,
  "str": "test",
}
`;

exports[`the wooley way fe child route with matching route should mount/unmount the proper state: unmount 2`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "0",
        "pathname": "",
        "search": "",
      },
      Object {
        "action": "PUSH",
        "hash": "",
        "key": "1",
        "pathname": "/products",
        "search": "",
        "state": undefined,
      },
    ],
    "key": "<key>",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "num": 12,
  "products": null,
  "str": "test",
}
`;

exports[`the wooley way fe child route without route matching should create Products 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [],
    "key": "<key>",
    "pathname": "",
    "search": "",
  },
  "num": 12,
  "str": "test",
}
`;

exports[`the wooley way fe child route without route matching should create Products 2`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [],
    "key": "<key>",
    "pathname": "",
    "search": "",
  },
  "num": 12,
  "str": "test",
}
`;

exports[`the wooley way fe should be setup 1`] = `
Object {
  "_route": Object {
    "action": "PUSH",
    "hash": "",
    "history": Array [],
    "pathname": "",
    "search": "",
  },
  "num": 12,
  "str": "test",
}
`;
